layouts/_default/style.scss
@import "~bulma/sass/utilities/_all";

.is-icon-2rem svg {
  height: 2rem !important;
  width: 2rem !important;
}

html.light-theme {
  background-color: $white-bis;
}

body.light-theme {
  .icon:not(.is-icon-2rem) {
    svg {
      width: 1rem !important;
      height: 1rem !important;
    }
  }
  @import "~bulma";
  @import "~buefy/src/scss/buefy";
  $body-background-color: #F0F2F4 !important;
  background-color: $body-background-color;

  .copy {
    color: #24292e;
    background-image: linear-gradient(-180deg, #fafbfc 0%, #eff3f6 90%);
  }

  .table.has-mobile-cards, .table.has-table-cards {
    tr {
      background-color: $light !important;
    }
  }

  .custom-link-style.is-active, .custom-link-style.nuxt-link-active {
    color: $grey-dark;
  }

  .autocomplete {
    input::placeholder {
      color: $grey;
    }
  }
}

html.dark-theme {
  background-color: $dark;
}
body.dark-theme {
  @import "./style/theme/dark/variables";
  .icon:not(.is-icon-2rem) {
    svg {
      width: 1rem !important;
      height: 1rem !important;
    }
  }
  @import "~bulma";
  @import "~buefy/src/scss/buefy";
  @import "./style/theme/dark/overrides";
  background-color: #353b48 !important;

  footer {
    background-color: #2f3640;
    small, p {
      color: $white;
    }
  }
  .copy {
    color: #D7DCE1;
    background-image: linear-gradient(-180deg, #616263 0%, #565A5D 90%);
  }

  .copy:hover {
    background-image: linear-gradient(-180deg, #48494A 0%, #3D4144 90%);
  }

  .is-dark-light {
    border-color: #888888 !important;
  }

  .is-outlined:hover, .is-outlined:hover {
    background-color: $grey-darker !important;
    color: white !important;
  }

  .table.has-mobile-cards, .table.has-table-cards {
    background-color: rgb(69, 69, 69) !important;
    tr {
      background-color: #363636 !important;
    }
  }
  .table input {
    background-color: $grey-dark !important;
  }

  .notification button.delete {
    background-color: $grey-dark;
  }

  .snackbar {
    color: $light-invert !important;
  }

  .custom-link-style.is-active, .custom-link-style.nuxt-link-active {
    color: $grey-light;
  }

  .radio {
    color: $grey-light;
  }
}

table .image {
  display: inline-block !important;
  margin: 0 !important;
}

table.trade .image {
  display: inline-block !important;
  margin: 0 0.5rem 0 0.5rem !important;
}

.media-content {
  overflow: hidden;
}

.b-radio.radio input[type=radio]:checked + .check {
  border-color: $info;
}

.b-radio.radio:hover input[type=radio] + .check {
  border-color: $info;
}

.b-radio.radio input[type=radio] + .check:before {
  background-color: $info;
}

main {
  @media screen and (max-width: $tablet - 1px) {
    section.section {
      padding: 0 !important;
    }
  }
}

// custom

.fixed {
  position: fixed;
  bottom: 0;
  width:100%;
  z-index: 10000;
}

a.navbar-item:hover, a.navbar-item.is-active, a.navbar-link:hover, a.navbar-link.is-active {
  color: $link;
}

.navbar-dropdown-custom-shadow {
  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1) !important;
}

.is-dark-blue {
  background-color: #16222e;
  color: #ecf0f1;
}

.is-dark-blue .title {
  color: $white-bis !important;
}

.is-dark-blue .subtitle {
  color: $white-ter !important;
}

.margin-top-one-em {
  margin-top: 1em !important;
}

.margin-top-two-em {
  margin-top: 2em !important;
}

@media screen and (max-width: $tablet - 1) {
  .is-margin-top-one-em-touch {
    margin-top: 1em !important;
  }
}

section.hero.is-dark-blue .subtitle a:hover {
  color: $info;
}

.content li + li {
  margin-top: 0;
}

.tabs li + li {
  margin-top: 0px !important;
}

.image-inherit {
  display: inherit;
}

.newYearNotification {
  background-color: #bdc3c7;
  color: white;
  font-size: 1.5rem;
}

.is-30xauto {
  height: auto;
  width: 30px;
}

.is-48xauto {
  height: auto;
  width: 48px;
}

.contributor-avatar {
  max-height: 48px;
}

.contributor-icons {
  height: 20px;
}

.contributor-media {
  height: 54px;
}

.scroll-to-top {
  position: fixed !important;
  z-index: 10;
  right: 16px;
  bottom: 16px;
}

/**
 * Colors by ages
 */

$border-bottom-width: 4px;
$padding-bottom: 10px;

$map: (
  "NoAge": #662211,
  "BronzeAge": #b78d13,
  "IronAge": #984420,
  "EarlyMiddleAges": #4e8144,
  "HighMiddleAges": #2f8e8e,
  "LateMiddleAges": #7f4285,
  "ColonialAge": #ce6404,
  "IndustrialAge": #a72926,
  "ProgressiveEra": #b6895b,
  "ModernEra": #465d88,
  "PostmodernEra": #8d9292,
  "ContemporaryEra": #ce654a,
  "Tomorrow": #22272c,
  "TheFuture": #8dc73f,
  "ArcticFuture": #e9f7f7,
  "OceanicFuture": #225a4b,
  "VirtualFuture": #551A8B,
  "SpaceAgeMars": #BB653D
);

@each $key, $color in $map {
  .#{$key}-header {
    border-bottom: $border-bottom-width solid $color;
    padding-bottom: $padding-bottom;
  }
}

table.table.has-table-cards {
  tbody, tfoot {
    tr {
      display: table;
      width: 100%;
      th {
        text-align: left !important;
      }
      td {
        text-align: right !important;
      }
    }
    tr.last-in-card:not(:last-child) {
      margin-bottom: 1rem;
    }
  }
}

